--- a/style.css
+++ b/style.css
@@ -1,74 +1,92 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     font-family: Arial, Helvetica, sans-serif;
 }
- 
-.container{
+
+.container {
     margin: auto;
     width: 1200px;
     display: flex;
 }
-.conatiner-div{
+
+.conatiner-div {
     width: 50%;
 }
-.conatiner-div >img{
+
+.conatiner-div>img {
     margin-top: 60px;
     width: 100%;
 }
-h1{
+
+h1 {
     font-size: 42px;
 }
-p{
+
+p {
     line-height: 28px;
 }
-.box{
-display: flex;
+
+.box {
+    display: flex;
 }
-.box>p{
+
+.box>p {
     margin-top: 0;
     border: 1px solid black;
     border-radius: 5px;
     margin-right: 10px;
     padding: 5px 10px;
 }
-.box>p:hover{
+
+.box>p:hover {
     background-color: black;
     color: white;
 }
-.category-name{
+
+.category-name {
     font-weight: 800;
     font-size: 17px;
-margin-bottom: 1px;
+    margin-bottom: 1px;
 }
-.price-calc{
+
+.price-calc {
     margin-top: 30px;
 }
-.price, .total-price{
+
+.price,
+.total-price {
     width: 300px;
     display: flex;
     justify-content: space-between;
 }
-.price{
+
+.price {
     border-bottom: 1px solid gray;
 }
-.total-price{
+
+.total-price {
     border-top: 2px solid black;
 }
-.promo-code{
+
+.promo-code {
     font-weight: 700;
     margin: 50px 0px 20px 0px;
 }
-#promo-code-text{
+
+#promo-code-text {
     margin-bottom: 0;
 }
-input{
+
+input {
     padding: 5px 10px;
     outline: none;
 }
+
 button {
     font-weight: 700;
     background: red;
@@ -77,11 +95,13 @@ button {
     color: white;
     border-radius: 4px;
 }
-.footer{
+
+.footer {
     width: 1200px;
     margin: auto;
 }
-#footer-total{
+
+#footer-total {
     font-size: 45px;
     text-align: center;
 }
@@ -89,38 +109,50 @@ button {
 
 
 /* // Responsive  */
-@media only screen and (max-width: 425px){
-    .container{
+@media only screen and (max-width: 425px) {
+    .container {
         flex-direction: column;
-        padding: 20px 40px;
-    }
-    .conatiner-div{
-        width: 100%;
-        padding: 20px;
-    }
-    .conatiner-div >img{
         width: 100%;
     }
-    h1 {
-        font-size: 60px;
+    .conatiner-div {
+        width: 100%;
+    }
+    
+    .conatiner-div>img {
+        width: 100%;
+    }
+    
+    .paragraph {
+        padding: 10px;
         text-align: center;
+    }
+    .box {
+        display: block;
+    }
+    .box>p {
+        text-align: center;
+        margin: 20px;
     }
     .category-name {
         text-align: center;
-        margin-bottom: 10px;
-        margin-top: 40px;
-    }
-    .box {
-        justify-content: center;
-    }
+        margin-top: 21px;
+    }    
     .price-calc {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        margin: 20px;
     }
-    .promo-code {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+    .price, .total-price {
+        width: 100%; 
+    }
+    #promo-code-text {
+        text-align: center;
+    }   
+    .promo-item {
+        text-align: center;
+    } 
+    .footer {
+        width: 100%;
     }
 }
+
+
+
